# SmartIO

./: .gitignore  CMakeLists.txt  build.gradle
gradle/wrapper/: gradle-wrapper.properties
smartio/: Context.cpp  Context.hpp  Context.tpp  Environment.cpp  Environment.hpp  Environment.tpp  Reader.cpp  Reader.hpp  Reader.tpp  Supplier.hpp  defaultSuppliers.cpp  defaultSuppliers.hpp  fileformatexception.cpp  fileformatexception.h  traits.hpp  typetoken.cpp  typetoken.hpp  utilitysupplier.hpp
source/: CMakeLists.txt
source/main/: CMakeLists.txt
source/main/cpp/: Context.cpp  Reader.cpp  defaultSuppliers.cpp  fileformatexception.cpp  typetoken.cpp
source/main/cpp/smartio/: Context.cpp  Environment.cpp  Reader.cpp  Writer.cpp  configurations.cpp  defaultConverters.cpp  defaultSuppliers.cpp  fileformatexception.cpp  typetoken.cpp
source/main/include/: Consumer.hpp  Context.hpp  Context.tpp  Environment.hpp  Environment.tpp  Reader.hpp  defaultSuppliers.hpp  traits.hpp  utilitysupplier.hpp
source/main/include/smartio/: Consumer.hpp  Consumer.tpp  Context.hpp  Context.tpp  Environment.hpp  Environment.tpp  Reader.hpp  Reader.tpp  Supplier.hpp  Supplier.tpp  Writer.hpp  Writer.tpp  configurations.hpp  defaultConverters.hpp  defaultSuppliers.hpp  detail.hpp  detail.tpp  endianess.hpp  fileformatexception.h  traits.hpp  typetoken.hpp  utilitysupplier.hpp
source/test/: CMakeLists.txt
source/test/lol/: main.cpp
src/smartio/cpp/: ConsumerRegistry.cpp  Context.cpp  Environment.cpp  ReadContext.cpp  Reader.cpp  WriteContext.cpp  Writer.cpp  defaultConverters.cpp  fileformatexception.cpp  typetoken.cpp
src/smartio/headers/smartio/: BoundConsumer.hpp  BoundConsumer.tpp  BoundSupplier.hpp  BoundSupplier.tpp  Consumer.hpp  Consumer.tpp  ConsumerRegistry.hpp  ConsumerRegistry.tpp  Context.hpp  Environment.hpp  Environment.tpp  ReadContext.hpp  ReadContext.tpp  Reader.hpp  Reader.tpp  StorageMap.hpp  StorageMap.tpp  Supplier.hpp  Supplier.tpp  SupplierRegistry.hpp  SupplierRegistry.tpp  WriteContext.hpp  WriteContext.tpp  Writer.hpp  Writer.tpp  configurations.hpp  defaultConverters.hpp  endianess.hpp  fileformatexception.h  traits.hpp  typetoken.hpp  utilitysupplier.hpp
src/smartioTest/cpp/: CUnitMain.cpp
test/: main.cpp
